--- a/TR-Asdos-Dummy/TR-Asdos-Dummy.vcxproj
+++ b/TR-Asdos-Dummy/TR-Asdos-Dummy.vcxproj
@@ -81,6 +81,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>C:\Users\Kelvin\source\repos\Dummy\TR-Asdos-Dummy\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\Kelvin\source\repos\Dummy\library;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
