--- a/TR-Asdos-Dummy/TR-Asdos-Dummy.vcxproj
+++ b/TR-Asdos-Dummy/TR-Asdos-Dummy.vcxproj
@@ -78,6 +78,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>C:\Users\user\source\repos\dummy\TR-Asdos-Dummy\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\user\source\repos\dummy\library;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
